# anno2vcf

./: .gitignore  LICENSE  README.md  anno2vcf.bat  anno2vcf.py  anno_excel_to_vcf.py  pyproject.toml
examples/: README.md  simple_ANNO.xlsx
